--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.12",
     "sucrase": "^3.20.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
