--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DATABASE_HOST=127.0.0.1
 DATABASE_PORT=3306
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=password
+
+TOKEN_SECRET=z{?TbV*Ug$Mu0*G^?AA;H}U`fhk{G+EI:^ru;~Ixw<9qQ1LwxCV7{x*CYP2U
+TOKEN_TTL=7d
