add cors and helmet api

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DATABASE_PASSWORD=password
 
 TOKEN_SECRET=z{?TbV*Ug$Mu0*G^?AA;H}U`fhk{G+EI:^ru;~Ixw<9qQ1LwxCV7{x*CYP2U
 TOKEN_TTL=7d
+
+APP_URL=http://localhost:3001
+APP_URL_PORT=3001
